tests/ui/derive/fail_validate_distinct_scalar.rs
use foundry::Validate;
use serde::Deserialize;

#[derive(Deserialize, Validate)]
struct InvalidDistinctRequest {
    #[validate(distinct)]
    tag: String,
}

fn main() {}
